Windows run script should work